# task-manager

./: Dockerfile  README.md  business_rules.txt  docker-compose.yml  pyproject.toml
task_manager/: settings.py  urls.py
tasks/: models.py  tests.py
tasks/migrations/: 0001_initial.py
